--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Stick It</title>
+    <link rel='stylesheet' href='/stylesheets/index.css' />
+    <link rel='stylesheet' href='/bower_components/gumby/css/gumby.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <script type="text/javascript" src="bower_components/jquery/jquery.js"></script>
+    <script type="text/javascript" src="bower_components/modernizr/modernizr.js"></script>
+     <script type="text/javascript" src="bower_components/gumby/js/libs/gumby.js"></script>
+    <script type="text/javascript" src="bower_components/gumby/js/libs/gumby.init.js"></script>
+   
+    <script type="text/javascript" src="javascripts/index.js"></script>
   </body>
 </html>
